Fixed webkit-box display in news on firefox

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -594,16 +594,23 @@ body{
     }
 
     .card-body{
-        display: flex;
-        flex-direction: column;
+        //display: flex;
+        //flex-direction: column;
         padding: 1rem 1em 2rem 1rem;
     }
 
     .card-text{
-        display: -webkit-box;
+        display: flex;
+        display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+        display: -moz-box;
+
+
+        //text-overflow: ellipsis;
         -webkit-line-clamp: 3;
+
         -webkit-box-orient: vertical;
         overflow: hidden;
+
     }
 
 
